--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer-s3": "^3.0.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1"
   }
 }
